force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__PMR_Product_List_Relevant_Measures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__PMR_Product_List_Relevant_Measures__c</fullName>
    <description>Measure codes defined for weeklypromotionmeasureresult and monthlypromotionmeasureresult table</description>
    <label>Promotion Measure Result</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIV</fullName>
            </value>
            <value>
                <fullName>PTV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>