force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Product_Definition_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Definition_Policy__c</fullName>
    <description>Select the method to add products to the trade calendar and account plan.</description>
    <inlineHelpText>Add products to your trade calendar and account plan using the Dynamic or Static method. The Dynamic method adds products automatically based on predefined criteria. The Static method requires you to manually add a fixed list of products. If no option is selected, both methods are available.</inlineHelpText>
    <label>Product Definition Policy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>