force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Promotion_Access_Definition_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Access_Definition_Policy__c</fullName>
    <description>Defines whether the edit and access rights are dependent on the product categories the user has assigned or the account and product category relationship.</description>
    <inlineHelpText>Defines whether the edit and access rights are dependent on the product categories the user has assigned or the account and product category relationship.</inlineHelpText>
    <label>Promotion Access Definition Policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent_Anchors</fullName>
                <default>true</default>
                <label>Independent Anchors</label>
            </value>
            <value>
                <fullName>Combined_Anchors</fullName>
                <label>Combined Anchors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>