force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Promotion_Aggregation_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Aggregation_Level__c</fullName>
    <description>Defines at which level the product is located.</description>
    <inlineHelpText>Defines at which level the product is located.</inlineHelpText>
    <label>Promotion Aggregation Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>SubCategory</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
                <default>true</default>
                <label>Brand</label>
            </value>
            <value>
                <fullName>Flavor</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>