force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Promotion_Phases__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Phases__c</fullName>
    <description>Select the promotion phases to show in the trade calendar and account plan filters.</description>
    <inlineHelpText>Select the promotion phases to show in the trade calendar and account plan filters.</inlineHelpText>
    <label>Promotion Phases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Promotion_Phases</valueSetName>
    </valueSet>
</CustomField>