force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Sales_Org_Admin_User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org_Admin_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Org Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Organization_Admin_User</relationshipName>
    <type>Lookup</type>
</CustomField>