force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Sales_Org_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org_Value__c</fullName>
    <description>Refers to the mapped Salesforce picklist values.</description>
    <label>Sales Org Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Sales_Org</valueSetName>
    </valueSet>
</CustomField>