force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Sales_Organization_Cluster__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Organization_Cluster__c</fullName>
    <description>Values for the organization cluster</description>
    <inlineHelpText>Identifies the cluster the sales org can belongs to.</inlineHelpText>
    <label>Sales Organization Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>