force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Should_Include_Discontinued_Products__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Should_Include_Discontinued_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the discontinued products are included in the calculation of the account plan profit and loss and customer business plan.</description>
    <label>Include Discontinued Products</label>
    <type>Checkbox</type>
</CustomField>