force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__State__c</fullName>
    <description>Name of the State</description>
    <label>State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>