force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Street__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Street__c</fullName>
    <description>Name of a street</description>
    <label>Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>