force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__SWIFT__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__SWIFT__c</fullName>
    <description>International bank account identifier</description>
    <label>SWIFT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>