force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Tax_Jurisdiction_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tax_Jurisdiction_Code__c</fullName>
    <description>Tax account number</description>
    <label>TIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>