force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Tenant_Substrate__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tenant_Substrate__c</fullName>
    <description>Tenant where the Processing requests for this Sales Org are sent to.</description>
    <label>Tenant Substrate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyperforce_AWS</fullName>
                <default>true</default>
                <label>Hyperforce</label>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>