force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Used_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Used_Reference_Date__c</fullName>
    <description>Determines which value is set in the view for the product hierarchy resolution reference date</description>
    <inlineHelpText>Defines which value is set in the view for the product/customer hierarchy resolution reference date.</inlineHelpText>
    <label>Used Reference Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>startdate</fullName>
                <default>true</default>
                <label>startdate</label>
            </value>
            <value>
                <fullName>dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>