force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Visit_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visit_Start_Time__c</fullName>
    <description>Stores Visit Start Time</description>
    <label>Visit Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>