force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Volume_Unit__c</fullName>
    <label>Volume Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>l</fullName>
                <default>true</default>
                <label>l</label>
            </value>
            <value>
                <fullName>gallon</fullName>
            </value>
            <value>
                <fullName>cm3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>