force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Week_Day_Share_Profile__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Week_Day_Share_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Week Day Share Profile that is used as default for this Sales Organization.</description>
    <label>Week Day Share Profile</label>
    <referenceTo>cgcloud__Week_Day_Share_Profile__c</referenceTo>
    <relationshipLabel>Sales Organization</relationshipLabel>
    <relationshipName>Sales_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>