force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Weight_Unit__c</fullName>
    <label>Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ton</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
                <default>true</default>
                <label>kg</label>
            </value>
            <value>
                <fullName>pound</fullName>
            </value>
            <value>
                <fullName>oz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>