force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__WMI_Product_List_Relevant_Measures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__WMI_Product_List_Relevant_Measures__c</fullName>
    <description>Measure codes defined for weeklymeasureint table</description>
    <label>Weekly Measure Int</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONS</fullName>
            </value>
            <value>
                <fullName>BSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>