force-app/main/default/objects/cgcloud__Sales_Organization__c/fields/cgcloud__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Zip_Code__c</fullName>
    <description>Postal code.</description>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>