force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Cannot_Change_Custom_Calendar.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Cannot_Change_Custom_Calendar</fullName>
    <active>true</active>
    <description>You can’t make changes to an active custom calendar</description>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Custom_Calendar__c),  NOT(ISBLANK( PRIORVALUE(cgcloud__Custom_Calendar__c))))</errorConditionFormula>
    <errorDisplayField>cgcloud__Custom_Calendar__c</errorDisplayField>
    <errorMessage>You can’t make changes to an active custom calendar</errorMessage>
</ValidationRule>