force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Cannot_Remove_MI_Off_Platform.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Cannot_Remove_MI_Off_Platform</fullName>
    <active>true</active>
    <description>Elements for which manual inputs are allowed in Consumer Goods Processing Service
        can’t be deselected.</description>
    <errorConditionFormula>AND(
        ISCHANGED(cgcloud__Manual_Inputs_Off_Platform__c),
        AND(NOT(INCLUDES(cgcloud__Manual_Inputs_Off_Platform__c, &apos;CBP&apos;)),
        INCLUDES(PRIORVALUE(cgcloud__Manual_Inputs_Off_Platform__c), &apos;CBP&apos;))
        )</errorConditionFormula>
    <errorDisplayField>cgcloud__Manual_Inputs_Off_Platform__c</errorDisplayField>
    <errorMessage>Elements for which manual inputs are allowed in Consumer Goods Processing Service
        can’t be deselected.</errorMessage>
</ValidationRule>