force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__CP_Labels_Enabled_When_CP_MQ_Enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__CP_Labels_Enabled_When_CP_MQ_Enabled</fullName>
    <active>true</active>
    <description>Custom Period Labels must be enabled when Custom Periods for Month and Quarter is
        enabled</description>
    <errorConditionFormula>AND(!cgcloud__Enable_Custom_Period_Labels__c,
        ISPICKVAL(cgcloud__Additional_Custom_Period_Level__c,&apos;Enabled&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Enable_Custom_Period_Labels__c</errorDisplayField>
    <errorMessage>Enable this feature because the Custom Periods for Months and Quarters feature is
        enabled</errorMessage>
</ValidationRule>