force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Language_Unique_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Language_Unique_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR((NOT(ISBLANK(Text(cgcloud__Language_1__c))) &amp;&amp; OR(Text(cgcloud__Language_1__c)== Text(cgcloud__Language_2__c), Text(cgcloud__Language_1__c)== Text(cgcloud__Language_3__c), Text(cgcloud__Language_1__c)== Text(cgcloud__Language_4__c))),(NOT(ISBLANK(TEXT(cgcloud__Language_2__c))) &amp;&amp; OR(Text(cgcloud__Language_2__c)== Text(cgcloud__Language_3__c), Text(cgcloud__Language_2__c)== Text(cgcloud__Language_4__c))),(NOT(ISBLANK(Text(cgcloud__Language_3__c))) &amp;&amp; (Text(cgcloud__Language_3__c)== Text(cgcloud__Language_4__c) ))),true,false)</errorConditionFormula>
    <errorMessage>Language already exists, please enter different Language.</errorMessage>
</ValidationRule>