force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Lookback_Period_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Lookback_Period_Required</fullName>
    <active>true</active>
    <description>Validates whether a lookback period is specified if the Include discontinued products checkbox is selected.</description>
    <errorConditionFormula>AND(cgcloud__Should_Include_Discontinued_Products__c, ISPICKVAL(cgcloud__Lookback_Period_In_Years__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Lookback_Period_In_Years__c</errorDisplayField>
    <errorMessage>Complete this field if the Include discontinued products checkbox is selected.</errorMessage>
</ValidationRule>