force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Multiple_Time_Level_Cant_Be_Disabled.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Multiple_Time_Level_Cant_Be_Disabled</fullName>
    <active>true</active>
    <description>Prevents disabling KPI time intervals for months and quarters.</description>
    <errorConditionFormula>AND(
ISCHANGED(cgcloud__Edits_On_Multiple_Time_Level__c),
ISPICKVAL(PRIORVALUE( cgcloud__Edits_On_Multiple_Time_Level__c ), &quot;Enabled&quot;)
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Edits_On_Multiple_Time_Level__c</errorDisplayField>
    <errorMessage>Once enabled, KPI time intervals for months and quarters can&apos;t be disabled.</errorMessage>
</ValidationRule>