force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Sales_Org_Name_length.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sales_Org_Name_length</fullName>
    <active>true</active>
    <description>Name must be four characters.</description>
    <errorConditionFormula>LEN(Name) &lt;&gt; 4</errorConditionFormula>
    <errorMessage>Name must be four characters.</errorMessage>
</ValidationRule>