force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Validate_Sales_Org_for_Week_Day_Profile.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validate_Sales_Org_for_Week_Day_Profile</fullName>
    <active>true</active>
    <description>Sales Org of the Sales Organization record should match with the Sales Org of the selected Week Day Share Profile.</description>
    <errorConditionFormula>AND(
          NOT(ISBLANK( cgcloud__Week_Day_Share_Profile__c)
          ),
          (
          TEXT(cgcloud__Sales_Org_Value__c) &lt;&gt;
          TEXT(cgcloud__Week_Day_Share_Profile__r.cgcloud__Sales_Org__c)
          )
          )</errorConditionFormula>
    <errorMessage>The Sales Organization and the selected Week Day Share Profile must have the same Sales Org.</errorMessage>
</ValidationRule>