force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Validation_rule_for_fund_template.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validation_rule_for_fund_template</fullName>
    <active>true</active>
    <errorConditionFormula>IF( cgcloud__Enable_Auto_Tactic_Fund_Assignment__c == true  &amp;&amp;  ISBLANK(cgcloud__Default_Tactic_Fund_Template__c),true,false  )</errorConditionFormula>
    <errorDisplayField>cgcloud__Default_Tactic_Fund_Template__c</errorDisplayField>
    <errorMessage>Please select the Default Fund Template to proceed.</errorMessage>
</ValidationRule>