force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Validation_rule_for_sales_org_name.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Validation_rule_for_sales_org_name</fullName>
    <active>true</active>
    <description>Name must match with selected Sales Org value.</description>
    <errorConditionFormula>Name  &lt;&gt; Text( cgcloud__Sales_Org_Value__c )</errorConditionFormula>
    <errorMessage>Name must match with selected Sales Org value.</errorMessage>
</ValidationRule>