force-app/main/default/objects/cgcloud__Sales_Organization__c/validationRules/cgcloud__Visit_Start_Time_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Visit_Start_Time_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
NOT(ISBLANK( cgcloud__Visit_Start_Time__c)), 
NOT(REGEX(cgcloud__Visit_Start_Time__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>cgcloud__Visit_Start_Time__c</errorDisplayField>
    <errorMessage>Please enter the correct format for Visit Start Time (hh:mm).</errorMessage>
</ValidationRule>